fixed blurry map

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -495,6 +495,11 @@ form {
     cursor: pointer;
 }
 
+#map {
+    width: 100%;
+    height: 300px;
+}
+
 .mapboxgl-canvas {
     width: 100%!important;
     height: auto!important;
